layout/style/ua.css
namespace
parsererror
url
(
http
:
/
/
www
.
mozilla
.
org
/
newlayout
/
xml
/
parsererror
.
xml
)
;
namespace
xul
url
(
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
)
;
*
|
*
:
:
-
moz
-
table
{
display
:
table
!
important
;
box
-
sizing
:
border
-
box
;
}
*
|
*
:
:
-
moz
-
inline
-
table
{
display
:
inline
-
table
!
important
;
box
-
sizing
:
border
-
box
;
}
*
|
*
:
:
-
moz
-
table
-
outer
{
display
:
inherit
!
important
;
margin
:
inherit
!
important
;
padding
:
0
!
important
;
border
:
none
!
important
;
float
:
inherit
;
clear
:
inherit
;
position
:
inherit
;
top
:
inherit
;
right
:
inherit
;
bottom
:
inherit
;
left
:
inherit
;
z
-
index
:
inherit
;
page
-
break
-
before
:
inherit
;
page
-
break
-
after
:
inherit
;
page
-
break
-
inside
:
inherit
;
vertical
-
align
:
inherit
;
line
-
height
:
inherit
;
align
-
self
:
inherit
;
order
:
inherit
;
-
moz
-
transform
:
inherit
;
-
moz
-
transform
-
origin
:
inherit
;
-
moz
-
backface
-
visibility
:
inherit
;
clip
:
inherit
;
}
*
|
*
:
:
-
moz
-
table
-
row
{
display
:
table
-
row
!
important
;
}
*
|
*
:
:
-
moz
-
table
-
column
{
display
:
table
-
column
!
important
;
}
*
|
*
:
:
-
moz
-
table
-
column
-
group
{
display
:
table
-
column
-
group
!
important
;
}
*
|
*
:
:
-
moz
-
table
-
row
-
group
{
display
:
table
-
row
-
group
!
important
;
}
*
|
*
:
:
-
moz
-
table
-
cell
{
display
:
table
-
cell
!
important
;
white
-
space
:
inherit
;
}
supports
(
display
:
ruby
)
{
*
|
*
:
:
-
moz
-
ruby
{
display
:
ruby
;
}
*
|
*
:
:
-
moz
-
ruby
-
base
{
display
:
ruby
-
base
;
}
*
|
*
:
:
-
moz
-
ruby
-
text
{
display
:
ruby
-
text
;
}
*
|
*
:
:
-
moz
-
ruby
-
base
-
container
{
display
:
ruby
-
base
-
container
;
}
*
|
*
:
:
-
moz
-
ruby
-
text
-
container
{
display
:
ruby
-
text
-
container
;
}
}
*
|
*
:
:
-
moz
-
list
-
bullet
*
|
*
:
:
-
moz
-
list
-
number
{
display
:
inline
;
vertical
-
align
:
baseline
;
font
-
variant
-
numeric
:
tabular
-
nums
;
}
*
|
*
:
-
moz
-
any
-
link
{
cursor
:
pointer
;
}
*
|
*
:
-
moz
-
any
-
link
:
-
moz
-
focusring
{
outline
:
1px
dotted
;
}
*
|
*
:
:
-
moz
-
anonymous
-
block
*
|
*
:
:
-
moz
-
cell
-
content
{
display
:
block
!
important
;
position
:
static
!
important
;
unicode
-
bidi
:
inherit
;
text
-
overflow
:
inherit
;
overflow
-
clip
-
box
:
inherit
;
}
*
|
*
:
:
-
moz
-
anonymous
-
block
*
|
*
:
:
-
moz
-
anonymous
-
positioned
-
block
{
outline
:
inherit
;
outline
-
offset
:
inherit
;
clip
-
path
:
inherit
;
filter
:
inherit
;
mask
:
inherit
;
opacity
:
inherit
;
text
-
decoration
:
inherit
;
-
moz
-
box
-
ordinal
-
group
:
inherit
!
important
;
overflow
-
clip
-
box
:
inherit
;
}
*
|
*
:
:
-
moz
-
xul
-
anonymous
-
block
{
display
:
block
!
important
;
position
:
static
!
important
;
float
:
none
!
important
;
-
moz
-
box
-
ordinal
-
group
:
inherit
!
important
;
text
-
overflow
:
inherit
;
overflow
-
clip
-
box
:
inherit
;
}
*
|
*
:
:
-
moz
-
scrolled
-
content
*
|
*
:
:
-
moz
-
scrolled
-
canvas
*
|
*
:
:
-
moz
-
scrolled
-
page
-
sequence
{
padding
:
inherit
;
display
:
block
;
-
moz
-
box
-
orient
:
inherit
;
unicode
-
bidi
:
inherit
;
text
-
overflow
:
inherit
;
-
moz
-
column
-
count
:
inherit
;
-
moz
-
column
-
width
:
inherit
;
-
moz
-
column
-
gap
:
inherit
;
-
moz
-
column
-
rule
:
inherit
;
align
-
content
:
inherit
;
align
-
items
:
inherit
;
flex
-
direction
:
inherit
;
flex
-
wrap
:
inherit
;
justify
-
content
:
inherit
;
position
:
static
!
important
;
float
:
none
!
important
;
overflow
-
clip
-
box
:
inherit
;
}
*
|
*
:
:
-
moz
-
viewport
*
|
*
:
:
-
moz
-
viewport
-
scroll
*
|
*
:
:
-
moz
-
canvas
*
|
*
:
:
-
moz
-
scrolled
-
canvas
{
display
:
block
!
important
;
background
-
color
:
inherit
;
}
*
|
*
:
:
-
moz
-
viewport
-
scroll
{
overflow
:
auto
;
%
ifdef
XP_WIN
resize
:
both
;
%
endif
}
*
|
*
:
:
-
moz
-
column
-
content
{
unicode
-
bidi
:
inherit
;
text
-
overflow
:
inherit
;
display
:
inherit
!
important
;
height
:
100
%
;
}
*
|
*
:
:
-
moz
-
anonymous
-
flex
-
item
*
|
*
:
:
-
moz
-
anonymous
-
grid
-
item
{
display
:
block
;
}
*
|
*
:
:
-
moz
-
page
-
sequence
*
|
*
:
:
-
moz
-
scrolled
-
page
-
sequence
{
display
:
block
!
important
;
background
:
linear
-
gradient
(
#
606060
#
8a8a8a
)
fixed
;
height
:
100
%
;
}
*
|
*
:
:
-
moz
-
page
{
display
:
block
!
important
;
background
:
white
;
box
-
shadow
:
5px
5px
8px
#
202020
;
margin
:
0
.
125in
0
.
25in
;
}
*
|
*
:
:
-
moz
-
pagecontent
{
display
:
block
!
important
;
margin
:
auto
;
}
*
|
*
:
:
-
moz
-
pagebreak
{
display
:
block
!
important
;
}
*
|
*
:
:
-
moz
-
anonymous
-
positioned
-
block
{
display
:
block
!
important
;
position
:
inherit
;
top
:
inherit
;
left
:
inherit
;
bottom
:
inherit
;
right
:
inherit
;
z
-
index
:
inherit
;
clip
:
inherit
;
opacity
:
inherit
;
unicode
-
bidi
:
inherit
;
text
-
overflow
:
inherit
;
}
media
print
{
*
{
cursor
:
default
!
important
;
}
}
*
|
*
:
not
(
:
root
)
:
-
moz
-
full
-
screen
{
position
:
fixed
!
important
;
top
:
0
!
important
;
left
:
0
!
important
;
right
:
0
!
important
;
bottom
:
0
!
important
;
z
-
index
:
2147483647
!
important
;
background
:
black
;
width
:
100
%
!
important
;
height
:
100
%
!
important
;
margin
:
0
!
important
;
min
-
width
:
0
!
important
;
max
-
width
:
none
!
important
;
min
-
height
:
0
!
important
;
max
-
height
:
none
!
important
;
box
-
sizing
:
border
-
box
!
important
;
}
:
not
(
xul
|
*
)
:
root
:
-
moz
-
full
-
screen
-
ancestor
{
overflow
:
hidden
!
important
;
}
parsererror
|
parsererror
{
display
:
block
;
font
-
family
:
sans
-
serif
;
font
-
weight
:
bold
;
white
-
space
:
pre
;
margin
:
1em
;
padding
:
1em
;
border
-
width
:
thin
;
border
-
style
:
inset
;
border
-
color
:
red
;
font
-
size
:
14pt
;
background
-
color
:
lightyellow
;
}
parsererror
|
sourcetext
{
display
:
block
;
white
-
space
:
pre
;
font
-
family
:
-
moz
-
fixed
;
margin
-
top
:
2em
;
margin
-
bottom
:
1em
;
color
:
red
;
font
-
weight
:
bold
;
font
-
size
:
12pt
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
touchcaret
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret
.
png
"
)
;
position
:
absolute
;
width
:
29px
;
height
:
31px
;
margin
-
left
:
-
15px
;
background
-
position
:
center
center
;
background
-
size
:
100
%
100
%
;
z
-
index
:
2147483647
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_left
.
png
"
)
;
margin
-
left
:
-
29px
;
width
:
29px
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_right
.
png
"
)
;
margin
-
left
:
0px
;
width
:
29px
;
}
media
(
min
-
resolution
:
1
.
5dppx
)
{
div
:
-
moz
-
native
-
anonymous
.
moz
-
touchcaret
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret
1
.
5x
.
png
"
)
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_left
1
.
5x
.
png
"
)
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_right
1
.
5x
.
png
"
)
;
}
}
media
(
min
-
resolution
:
2dppx
)
{
div
:
-
moz
-
native
-
anonymous
.
moz
-
touchcaret
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret
2x
.
png
"
)
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_left
2x
.
png
"
)
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_right
2x
.
png
"
)
;
}
}
media
(
min
-
resolution
:
2
.
25dppx
)
{
div
:
-
moz
-
native
-
anonymous
.
moz
-
touchcaret
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret
2
.
25x
.
png
"
)
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_left
2
.
25x
.
png
"
)
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
.
tilt
{
background
-
image
:
url
(
"
resource
:
/
/
gre
/
res
/
text_caret_tilt_right
2
.
25x
.
png
"
)
;
}
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
touchcaret
.
hidden
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
left
.
hidden
div
:
-
moz
-
native
-
anonymous
.
moz
-
selectioncaret
-
right
.
hidden
{
width
:
0px
;
height
:
0px
;
margin
:
0px
;
visibility
:
hidden
;
}
div
:
-
moz
-
native
-
anonymous
.
moz
-
custom
-
content
-
container
{
pointer
-
events
:
none
;
position
:
fixed
;
top
:
0
;
left
:
0
;
width
:
100
%
;
height
:
100
%
;
z
-
index
:
2147483648
;
}

