Bug 1096169 - Handle selection carets overlapping case. r=roc
UltraBlame original commit: 99dfd03ae4fa8e0d845a30c918b25e18adf5b541

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -1568,28 +1568,39 @@ moz
 selectioncaret
 -
 right
-{
-background
+div
+:
 -
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
-/
-res
-/
-text_caret
+moz
+-
+native
+-
+anonymous
 .
-png
-"
-)
-;
+moz
+-
+selectioncaret
+-
+left
+>
+div
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+right
+>
+div
+{
 position
 :
 absolute
@@ -1601,13 +1612,6 @@ width
 height
 :
 31px
-;
-margin
--
-left
-:
--
-15px
 ;
 background
 -
@@ -1643,45 +1647,23 @@ anonymous
 .
 moz
 -
+touchcaret
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
 selectioncaret
 -
 left
-.
-tilt
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
-/
-res
-/
-text_caret_tilt_left
-.
-png
-"
-)
-;
-margin
--
-left
-:
--
-29px
-;
-width
-:
-29px
-;
-}
+>
+div
 div
 :
 -
@@ -1696,8 +1678,8 @@ moz
 selectioncaret
 -
 right
-.
-tilt
+>
+div
 {
 background
 -
@@ -1714,34 +1696,13 @@ gre
 /
 res
 /
-text_caret_tilt_right
+text_caret
 .
 png
 "
 )
 ;
-margin
--
-left
-:
-0px
-;
-width
-:
-29px
-;
 }
-media
-(
-min
--
-resolution
-:
-1
-.
-5dppx
-)
-{
 div
 :
 -
@@ -1783,6 +1744,165 @@ selectioncaret
 -
 right
 {
+margin
+-
+left
+:
+-
+15px
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+left
+.
+tilt
+>
+div
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+/
+res
+/
+text_caret_tilt_left
+.
+png
+"
+)
+;
+margin
+-
+left
+:
+-
+14px
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+right
+.
+tilt
+>
+div
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+/
+res
+/
+text_caret_tilt_right
+.
+png
+"
+)
+;
+margin
+-
+left
+:
+14px
+;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+5dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+touchcaret
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+left
+>
+div
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+right
+>
+div
+{
 background
 -
 image
@@ -1824,6 +1944,8 @@ selectioncaret
 left
 .
 tilt
+>
+div
 {
 background
 -
@@ -1866,6 +1988,8 @@ selectioncaret
 right
 .
 tilt
+>
+div
 {
 background
 -
@@ -1928,6 +2052,8 @@ moz
 selectioncaret
 -
 left
+>
+div
 div
 :
 -
@@ -1942,6 +2068,8 @@ moz
 selectioncaret
 -
 right
+>
+div
 {
 background
 -
@@ -1982,6 +2110,8 @@ selectioncaret
 left
 .
 tilt
+>
+div
 {
 background
 -
@@ -2022,6 +2152,8 @@ selectioncaret
 right
 .
 tilt
+>
+div
 {
 background
 -
@@ -2084,6 +2216,8 @@ moz
 selectioncaret
 -
 left
+>
+div
 div
 :
 -
@@ -2098,6 +2232,8 @@ moz
 selectioncaret
 -
 right
+>
+div
 {
 background
 -
@@ -2140,6 +2276,8 @@ selectioncaret
 left
 .
 tilt
+>
+div
 {
 background
 -
@@ -2182,6 +2320,8 @@ selectioncaret
 right
 .
 tilt
+>
+div
 {
 background
 -
@@ -2255,6 +2395,42 @@ selectioncaret
 right
 .
 hidden
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+left
+.
+hidden
+>
+div
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+selectioncaret
+-
+right
+.
+hidden
+>
+div
 {
 width
 :
